--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,10 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: python-coverage (>= 3.6),
                      python-hacking (>= 0.7.0),
                      python-httpretty (>= 0.8.0),
+                     python-keystoneclient (>= 1:0.9.0),
                      python-mock (>= 1.0.1),
+                     python-requests (>= 1.2.3),
+                     python-six (>= 1.5.2),
                      python-testtools (>= 0.9.32),
                      subunit,
                      testrepository (>= 0.0.17)
