--- a/debian/control
+++ b/debian/control
@@ -7,17 +7,25 @@ Build-Depends: debhelper (>= 9),
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
                python-pbr,
-               python-setuptools
-Build-Depends-Indep: python-coverage (>= 3.6),
+               python-setuptools,
+               python-sphinx
+Build-Depends-Indep: python-cliff,
+                     python-coverage (>= 3.6),
+                     python-fixtures (>= 0.3.14),
                      python-hacking (>= 0.7.0),
-                     python-httpretty (>= 0.8.0),
-                     python-keystoneclient (>= 1:0.9.0),
-                     python-mock (>= 1.0.1),
-                     python-requests (>= 1.2.3),
-                     python-six (>= 1.5.2),
-                     python-testtools (>= 0.9.32),
+                     python-keystoneclient (>= 1:1.0.0),
+                     python-mock (>= 1.0),
+                     python-oslo.i18n (>= 1.3.0),
+                     python-oslo.serialization (>= 1.2.0),
+                     python-oslo.utils (>= 1.2.0),
+                     python-oslotest (>= 1.2.0),
+                     python-oslosphinx (>= 2.2.0.0),
+                     python-requests (>= 2.2.0),
+                     python-requests-mock (>= 0.5.1),
+                     python-six (>= 1.7.0),
+                     python-testtools (>= 0.9.36),
                      subunit,
-                     testrepository (>= 0.0.17)
+                     testrepository (>= 0.0.18)
 Standards-Version: 3.9.5
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-barbicanclient.git
@@ -26,10 +34,14 @@ Homepage: https://github.com/openstack/barbican
 Package: python-barbicanclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-keystoneclient (>= 1:0.9.0),
+Depends: python-cliff,
+         python-keystoneclient (>= 1:1.0.0),
+         python-oslo.i18n (>= 1.3.0),
+         python-oslo.serialization (>= 1.2.0),
+         python-oslo.utils (>= 1.2.0),
          python-pbr,
-         python-requests (>= 1.2.3),
-         python-six (>= 1.5.2),
+         python-requests (>= 2.2.0),
+         python-six (>= 1.7.0),
          ${misc:Depends},
          ${python:Depends}
 Description: OpenStack Key Management API client - Python 2.x
