--- a/debian/control
+++ b/debian/control
@@ -4,29 +4,31 @@ Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
+               dh-python,
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
                python-pbr,
                python-setuptools,
-               python-sphinx
-Build-Depends-Indep: python-cliff,
-                     python-coverage (>= 3.6),
-                     python-fixtures (>= 0.3.14),
-                     python-hacking (>= 0.7.0),
-                     python-keystoneclient (>= 1:1.0.0),
-                     python-mock (>= 1.0),
-                     python-oslo.i18n (>= 1.3.0),
-                     python-oslo.serialization (>= 1.2.0),
-                     python-oslo.utils (>= 1.2.0),
-                     python-oslotest (>= 1.2.0),
-                     python-oslosphinx (>= 2.2.0.0),
-                     python-requests (>= 2.2.0),
-                     python-requests-mock (>= 0.5.1),
-                     python-six (>= 1.7.0),
-                     python-testtools (>= 0.9.36),
+               python-sphinx,
+Build-Depends-Indep: python-cliff (>= 0.10.0),
+                     python-coverage,
+                     python-fixtures,
+                     python-hacking,
+                     python-keystoneclient (>= 1:1.1.0),
+                     python-mock,
+                     python-nose,
+                     python-oslo.i18n (>= 1.5.0),
+                     python-oslo.serialization (>= 1.4.0),
+                     python-oslo.utils (>= 1.4.0),
+                     python-oslosphinx (>= 2.5.0),
+                     python-oslotest (>= 1.5.1),
+                     python-requests,
+                     python-requests-mock (>= 0.6.0),
+                     python-six (>= 1.9.0),
+                     python-testtools,
                      subunit,
-                     testrepository (>= 0.0.18)
-Standards-Version: 3.9.5
+                     testrepository,
+Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-barbicanclient.git
 Homepage: https://github.com/openstack/barbican
@@ -34,14 +36,14 @@ Homepage: https://github.com/openstack/barbican
 Package: python-barbicanclient
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-cliff,
-         python-keystoneclient (>= 1:1.0.0),
-         python-oslo.i18n (>= 1.3.0),
-         python-oslo.serialization (>= 1.2.0),
-         python-oslo.utils (>= 1.2.0),
+Depends: python-cliff (>= 0.10.0),
+         python-keystoneclient (>= 1:1.1.0),
+         python-oslo.i18n (>= 1.5.0),
+         python-oslo.serialization (>= 1.4.0),
+         python-oslo.utils (>= 1.4.0),
          python-pbr,
-         python-requests (>= 2.2.0),
-         python-six (>= 1.7.0),
+         python-requests,
+         python-six (>= 1.9.0),
          ${misc:Depends},
          ${python:Depends}
 Description: OpenStack Key Management API client - Python 2.x
