--- a/debian/control
+++ b/debian/control
@@ -7,14 +7,14 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr,
+               python-pbr (>= 0.11),
                python-setuptools,
                python-sphinx,
 Build-Depends-Indep: python-cliff (>= 1.10.0),
                      python-coverage,
                      python-fixtures,
                      python-hacking,
-                     python-keystoneclient (>= 1:1.1.0),
+                     python-keystoneclient (>= 1:1.3.0),
                      python-mock,
                      python-nose,
                      python-oslo.i18n (>= 1.5.0),
@@ -22,7 +22,7 @@ Build-Depends-Indep: python-cliff (>= 1.10.0),
                      python-oslo.utils (>= 1.4.0),
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.5.1),
-                     python-requests,
+                     python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
                      python-six (>= 1.9.0),
                      python-testtools,
@@ -36,12 +36,12 @@ Homepage: https://github.com/openstack/barbican
 Package: python-barbicanclient
 Architecture: all
 Depends: python-cliff (>= 1.10.0),
-         python-keystoneclient (>= 1:1.1.0),
+         python-keystoneclient (>= 1:1.3.0),
          python-oslo.i18n (>= 1.5.0),
          python-oslo.serialization (>= 1.4.0),
          python-oslo.utils (>= 1.4.0),
-         python-pbr,
-         python-requests,
+         python-pbr (>= 0.11),
+         python-requests (>= 2.5.2),
          python-six (>= 1.9.0),
          ${misc:Depends},
          ${python:Depends},
