--- a/debian/control
+++ b/debian/control
@@ -7,25 +7,25 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr (>= 0.11),
+               python-pbr (>= 1.6),
                python-setuptools,
                python-sphinx,
-Build-Depends-Indep: python-cliff (>= 1.10.0),
+Build-Depends-Indep: python-cliff (>= 1.14.0),
                      python-coverage,
-                     python-fixtures,
+                     python-fixtures (>= 1.3.1),
                      python-hacking,
-                     python-keystoneclient (>= 1:1.3.0),
-                     python-mock,
+                     python-keystoneclient (>= 1:1.6.0),
+                     python-mock (>= 1.3),
                      python-nose,
                      python-oslo.i18n (>= 1.5.0),
                      python-oslo.serialization (>= 1.4.0),
-                     python-oslo.utils (>= 1.4.0),
+                     python-oslo.utils (>= 2.0.0),
                      python-oslosphinx (>= 2.5.0),
-                     python-oslotest (>= 1.5.1),
+                     python-oslotest (>= 1.10.0),
                      python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
                      python-six (>= 1.9.0),
-                     python-testtools,
+                     python-testtools (>= 1.4.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
@@ -35,12 +35,12 @@ Homepage: https://github.com/openstack/barbican
 
 Package: python-barbicanclient
 Architecture: all
-Depends: python-cliff (>= 1.10.0),
-         python-keystoneclient (>= 1:1.3.0),
+Depends: python-cliff (>= 1.14.0),
+         python-keystoneclient (>= 1:1.6.0),
          python-oslo.i18n (>= 1.5.0),
          python-oslo.serialization (>= 1.4.0),
-         python-oslo.utils (>= 1.4.0),
-         python-pbr (>= 0.11),
+         python-oslo.utils (>= 2.0.0),
+         python-pbr (>= 1.6),
          python-requests (>= 2.5.2),
          python-six (>= 1.9.0),
          ${misc:Depends},
