--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: python-barbicanclient
 Section: python
 Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
-Uploaders: Thomas Goirand <zigo@debian.org>
+Uploaders: Thomas Goirand <zigo@debian.org>,
 Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
@@ -10,6 +10,9 @@ Build-Depends: debhelper (>= 9),
                python-pbr (>= 1.6),
                python-setuptools,
                python-sphinx,
+               python3-all,
+               python3-pbr (>= 1.6),
+               python3-setuptools,
 Build-Depends-Indep: python-cliff (>= 1.14.0),
                      python-coverage,
                      python-fixtures (>= 1.3.1),
@@ -26,6 +29,20 @@ Build-Depends-Indep: python-cliff (>= 1.14.0),
                      python-requests-mock (>= 0.6.0),
                      python-six (>= 1.9.0),
                      python-testtools (>= 1.4.0),
+                     python3-cliff (>= 1.14.0),
+                     python3-fixtures (>= 1.3.1),
+                     python3-keystoneclient (>= 1:1.6.0),
+                     python3-mock (>= 1.3),
+                     python3-nose,
+                     python3-oslo.i18n (>= 1.5.0),
+                     python3-oslo.serialization (>= 1.4.0),
+                     python3-oslo.utils (>= 2.0.0),
+                     python3-oslotest (>= 1.10.0),
+                     python3-requests (>= 2.5.2),
+                     python3-requests-mock (>= 0.6.0),
+                     python3-six (>= 1.9.0),
+                     python3-subunit,
+                     python3-testtools (>= 1.4.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
@@ -51,3 +68,22 @@ Description: OpenStack Key Management API client - Python 2.x
  command-line script (barbican).
  .
  This package contains the Python 2.x module.
+
+Package: python3-barbicanclient
+Architecture: all
+Depends: python3-cliff (>= 1.14.0),
+         python3-keystoneclient (>= 1:1.6.0),
+         python3-oslo.i18n (>= 1.5.0),
+         python3-oslo.serialization (>= 1.4.0),
+         python3-oslo.utils (>= 2.0.0),
+         python3-pbr (>= 1.6),
+         python3-requests (>= 2.5.2),
+         python3-six (>= 1.9.0),
+         ${misc:Depends},
+         ${python3:Depends},
+Description: OpenStack Key Management API client - Python 3.x
+ This is a client for the Barbican Key Management API. This package includes a
+ Python library for accessing the API (the barbicanclient module), and a
+ command-line script (barbican).
+ .
+ This package contains the Python 3.x module.
