--- a/debian/control
+++ b/debian/control
@@ -46,8 +46,8 @@ Build-Depends-Indep: python-cliff (>= 1.14.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-barbicanclient.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-barbicanclient.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-barbicanclient.git
 Homepage: https://github.com/openstack/barbican
 
 Package: python-barbicanclient
