--- a/debian/control
+++ b/debian/control
@@ -47,9 +47,9 @@ Build-Depends-Indep: python-cliff (>= 1.15.0),
                      python3-testtools (>= 1.4.0),
                      subunit,
                      testrepository,
-Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-barbicanclient.git
+Standards-Version: 3.9.7
+Vcs-Browser: https://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-barbicanclient.git
 Homepage: https://github.com/openstack/barbican
 
 Package: python-barbicanclient
