--- a/debian/control
+++ b/debian/control
@@ -48,8 +48,8 @@ Build-Depends-Indep: python-cliff (>= 1.15.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.7
-Vcs-Browser: https://anonscm.debian.org/gitweb/?p=openstack/python-barbicanclient.git
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-barbicanclient.git
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-barbicanclient?h=debian%2Fnewton
+Vcs-Git: https://git.openstack.org/openstack/deb-python-barbicanclient -b debian/newton
 Homepage: https://github.com/openstack/barbican
 
 Package: python-barbicanclient
